force-app/main/default/objects/Contact/fields/Agentforce_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agentforce_Triggered</label>
    <type>Checkbox</type>
</CustomField>