force-app/main/default/objects/Contact/fields/Bench_Status_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Bench_Status_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bench_Status_Confirmed</label>
    <type>Checkbox</type>
</CustomField>