force-app/main/default/objects/Contact/fields/Expected_Bench_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Bench_Date__c</fullName>
    <label>Expected_Bench_Date</label>
    <type>Date</type>
</CustomField>