force-app/main/default/objects/Contact/fields/On_Bench__c.field-meta.xml
<CustomField>
    <fullName>On_Bench__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On_Bench</label>
    <type>Checkbox</type>
</CustomField>