force-app/main/default/objects/Contact/fields/Primary_Skills__c.field-meta.xml
<CustomField>
    <fullName>Primary_Skills__c</fullName>
    <label>Primary_Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>